# Graphics-Engine

./: CMakeLists.txt  Figures.cpp  Figures.h  Readme.md  Structs.cpp  Structs.h  System2DL.cpp  System2DL.h  System3DL.cpp  System3DL.h  Triangles3D.cpp  Triangles3D.h  Wireframes.cpp  Wireframes.h  ZBuffer.cpp  ZBuffer.h  easy_image.cc  easy_image.h  engine.cpp  ini_configuration.cc  ini_configuration.h
INI Files/INI 2D-Lsystemen/: L_systems027.ini  filelist
